--- a/.env
+++ b/.env
@@ -3,7 +3,7 @@ DB_TABLE=acme_db
 DB_USERNAME=posgres
 DB_NAME=acme_db
 DB_PASSWORD=nyeebroo
-DB_USER=postgres
+DB_USER= nyeebroo
 DB_HOST=localhost
 DB_USER_PASSWORD=nyeebroo
 DB_PORT=5432
