--- a/requirements.txt
+++ b/requirements.txt
@@ -1,30 +1,47 @@
 amqp==5.0.9
 asgiref==3.4.1
+attrs==21.4.0
 backports.zoneinfo==0.2.1
 billiard==3.6.4.0
 celery==5.2.1
 certifi==2021.10.8
+cffi==1.15.0
 charset-normalizer==2.0.9
 click==8.0.3
 click-didyoumean==0.3.0
 click-plugins==1.1.1
 click-repl==0.2.0
+cryptography==36.0.1
 Django==4.0
 django-cors-headers==3.10.1
 django-filter==21.1
 djangorestframework==3.13.1
 idna==3.3
+iniconfig==1.1.1
 kombu==5.2.2
+ndg-httpsclient==0.5.1
 numpy==1.21.5
+packaging==21.3
 pandas==1.3.5
+pluggy==1.0.0
 prompt-toolkit==3.0.24
 psycopg2==2.9.2
+pusher==3.1.0
+py==1.11.0
+pyasn1==0.4.8
+pycparser==2.21
+PyNaCl==1.4.0
+pyOpenSSL==21.0.0
+pyparsing==3.0.6
+pytest==6.2.5
+pytest-django==4.5.2
 python-dateutil==2.8.2
 python-dotenv==0.19.2
 pytz==2021.3
 requests==2.26.0
 six==1.16.0
 sqlparse==0.4.2
+toml==0.10.2
 urllib3==1.26.7
 vine==5.0.0
 wcwidth==0.2.5
